# room-service/src/main/java/com/example/service/dto/UserConnectDto.java
@@ -1,0 +1,6 @@
+package com.example.service.dto;
+
+public record UserConnectDto(
+        String url
+) {
+}
